<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="olek.pwr.lista101.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/textStart"
            android:textAlignment="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textAy"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textAy"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/poleAy"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="0.0"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textAz"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textAz"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/poleAz"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="0.0"
                    android:textAlignment="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textAx"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textAx"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/poleAx"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="0.0"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textCounter"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/counter" />

                <TextView
                    android:id="@+id/counterTV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="0" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="539dp">

            <Button
                android:id="@+id/btnStart"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:onClick="startBtn"
                android:text="@string/btnStart"
                android:textAlignment="center" />


            <Button
                android:id="@+id/btnStop"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:elevation="0dp"
                android:onClick="stopBtn"
                android:text="@string/btnStop"
                android:textAlignment="center"
                android:visibility="visible" />


            <Button
                android:id="@+id/btnReset"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:onClick="resetBtn"
                android:text="@string/btnReset"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
